kubernetes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tech-buddy-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tech-buddy
  template:
    metadata:
      labels:
        app: tech-buddy
    spec:
      containers:
        - name: tech-buddy
          image: delvlooping/tech-buddy:latest
          ports:
            - containerPort: 3000
