kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tech-buddy-service
spec:
  selector:
    app: tech-buddy
  ports:
    - port: 3000
      targetPort: 3000
  type: LoadBalancer
